@@ -10,6 +10,7 @@ import com.liferay.osb.faro.engine.client.model.IndividualSegment;
 import com.liferay.osb.faro.engine.client.model.IndividualSegmentMembership;
 import com.liferay.osb.faro.engine.client.model.IndividualSegmentMembershipChange;
 import com.liferay.osb.faro.engine.client.model.IndividualSegmentMembershipChangeAggregation;
+import com.liferay.osb.faro.engine.client.model.IndividualSegmentRealTimeMembership;
 import com.liferay.osb.faro.engine.client.model.Results;
 import com.liferay.osb.faro.engine.client.util.OrderByField;
 import com.liferay.osb.faro.model.FaroProject;
@@ -29,26 +30,25 @@ import com.liferay.petra.string.StringPool;
 import com.liferay.portal.kernel.model.RoleConstants;
 import com.liferay.portal.kernel.util.Validator;
 
-import java.util.Collections;
+import jakarta.annotation.security.RolesAllowed;
+
+import jakarta.ws.rs.DELETE;
+import jakarta.ws.rs.DefaultValue;
+import jakarta.ws.rs.FormParam;
+import jakarta.ws.rs.GET;
+import jakarta.ws.rs.POST;
+import jakarta.ws.rs.PUT;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.PathParam;
+import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.QueryParam;
+import jakarta.ws.rs.core.MediaType;
+
 import java.util.Date;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
-
-import javax.annotation.security.RolesAllowed;
-
-import javax.ws.rs.DELETE;
-import javax.ws.rs.DefaultValue;
-import javax.ws.rs.FormParam;
-import javax.ws.rs.GET;
-import javax.ws.rs.POST;
-import javax.ws.rs.PUT;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
-import javax.ws.rs.core.MediaType;
 
 import org.osgi.service.component.annotations.Component;
 import org.osgi.service.component.annotations.Reference;
@@ -60,29 +60,6 @@ import org.osgi.service.component.annotations.Reference;
 @Path("/{groupId}/individual_segment")
 @Produces(MediaType.APPLICATION_JSON)
 public class IndividualSegmentController extends BaseFaroController {
-
-	@Path("/{id}/memberships")
-	@PUT
-	@RolesAllowed(RoleConstants.SITE_MEMBER)
-	public IndividualSegmentDisplay addMemberships(
-			@PathParam("groupId") long groupId, @PathParam("id") String id,
-			@FormParam("individualIds") FaroParam<List<String>>
-				individualIdsFaroParam)
-		throws Exception {
-
-		FaroProject faroProject =
-			faroProjectLocalService.getFaroProjectByGroupId(groupId);
-
-		IndividualSegment individualSegment =
-			contactsEngineClient.getIndividualSegment(faroProject, id, false);
-
-		validateUpdateMemberships(individualSegment);
-
-		contactsEngineClient.addMemberships(
-			faroProject, id, individualIdsFaroParam.getValue());
-
-		return new IndividualSegmentDisplay(individualSegment);
-	}
 
 	@Path("/{id}/channel/{channelId}")
 	@PUT
@@ -123,55 +100,25 @@ public class IndividualSegmentController extends BaseFaroController {
 
 		validateCreate(channelId, segmentType);
 
-		if (segmentType.equals(IndividualSegment.Type.DYNAMIC.name())) {
-			return createDynamic(
-				channelId, groupId, filter, includeAnonymousUsers, name);
-		}
-		else if (segmentType.equals(IndividualSegment.Type.STATIC.name())) {
-			return createStatic(
-				channelId, groupId, individualIdsFaroParam.getValue(), name);
-		}
-
-		return null;
+		return createIndividualSegment(
+			channelId, groupId, filter, includeAnonymousUsers, name,
+			segmentType);
 	}
 
 	@DELETE
-	@Path("/{id}")
 	@RolesAllowed(RoleConstants.SITE_MEMBER)
 	public void delete(
-			@PathParam("groupId") long groupId, @PathParam("id") String id)
+			@PathParam("groupId") long groupId,
+			@FormParam("ids") FaroParam<List<String>> idsFaroParam)
 		throws Exception {
 
-		contactsEngineClient.deleteIndividualSegment(
-			faroProjectLocalService.getFaroProjectByGroupId(groupId), id);
+		contactsEngineClient.deleteIndividualSegments(
+			faroProjectLocalService.getFaroProjectByGroupId(groupId),
+			idsFaroParam.getValue());
 
-		_preferencesController.removeIndividualSegmentPreferences(
-			groupId, id, FaroPreferencesConstants.SCOPE_GROUP);
-	}
-
-	@DELETE
-	@Path("/{id}/memberships")
-	@RolesAllowed(RoleConstants.SITE_MEMBER)
-	public IndividualSegmentDisplay deleteMemberships(
-			@PathParam("groupId") long groupId, @PathParam("id") String id,
-			@FormParam("individualIds") FaroParam<List<String>>
-				individualIdsFaroParam)
-		throws Exception {
-
-		FaroProject faroProject =
-			faroProjectLocalService.getFaroProjectByGroupId(groupId);
-
-		IndividualSegment individualSegment =
-			contactsEngineClient.getIndividualSegment(faroProject, id, false);
-
-		validateUpdateMemberships(individualSegment);
-
-		for (String individualId : individualIdsFaroParam.getValue()) {
-			contactsEngineClient.deleteMembership(
-				faroProject, id, individualId);
-		}
-
-		return new IndividualSegmentDisplay(individualSegment);
+		_preferencesController.removeIndividualSegmentsPreferences(
+			groupId, idsFaroParam.getValue(),
+			FaroPreferencesConstants.SCOPE_GROUP);
 	}
 
 	@GET
@@ -281,6 +228,26 @@ public class IndividualSegmentController extends BaseFaroController {
 	}
 
 	@GET
+	@Path("/{id}/real-time-memberships")
+	@RolesAllowed(RoleConstants.SITE_MEMBER)
+	@SuppressWarnings("unchecked")
+	public FaroResultsDisplay getRealTimeMemberships(
+			@PathParam("groupId") long groupId, @PathParam("id") String id,
+			@QueryParam("day") String day, @QueryParam("filter") String filter,
+			@QueryParam("cur") int cur, @QueryParam("delta") int delta,
+			@DefaultValue(StringPool.BLANK) @QueryParam("orderByFields")
+				FaroParam<List<OrderByField>> orderByFieldsFaroParam)
+		throws Exception {
+
+		Results<IndividualSegmentRealTimeMembership> results =
+			contactsEngineClient.getIndividualSegmentRealTimeMemberships(
+				faroProjectLocalService.getFaroProjectByGroupId(groupId), day,
+				filter, id, cur, delta, orderByFieldsFaroParam.getValue());
+
+		return new FaroResultsDisplay(results);
+	}
+
+	@GET
 	@Path("/unassigned")
 	@RolesAllowed(RoleConstants.SITE_MEMBER)
 	public FaroResultsDisplay getUnassigned(
@@ -323,7 +290,8 @@ public class IndividualSegmentController extends BaseFaroController {
 			@QueryParam("contactsEntityType") int contactsEntityType,
 			@QueryParam("dataSourceId") String dataSourceId,
 			@QueryParam("query") String query,
-			@QueryParam("segmentType") String segmentType,
+			@DefaultValue(StringPool.BLANK) @QueryParam("segmentTypes")
+				FaroParam<List<String>> segmentTypesFaroParam,
 			@QueryParam("state") String state, @QueryParam("cur") int cur,
 			@QueryParam("delta") int delta,
 			@DefaultValue(StringPool.BLANK) @QueryParam("orderByFields")
@@ -332,31 +300,8 @@ public class IndividualSegmentController extends BaseFaroController {
 
 		return search(
 			groupId, channelId, contactsEntityId, contactsEntityType,
-			dataSourceId, query, segmentType, state, cur, delta,
-			orderByFieldsFaroParam.getValue());
-	}
-
-	@Path("/search")
-	@POST
-	@RolesAllowed(RoleConstants.SITE_MEMBER)
-	public FaroResultsDisplay searchByForm(
-			@PathParam("groupId") long groupId,
-			@FormParam("channelId") String channelId,
-			@FormParam("contactsEntityId") String contactsEntityId,
-			@FormParam("contactsEntityType") int contactsEntityType,
-			@FormParam("dataSourceId") String dataSourceId,
-			@FormParam("query") String query,
-			@FormParam("segmentType") String segmentType,
-			@FormParam("state") String state, @FormParam("cur") int cur,
-			@FormParam("delta") int delta,
-			@DefaultValue(StringPool.BLANK) @FormParam("orderByFields")
-				FaroParam<List<OrderByField>> orderByFieldsFaroParam)
-		throws Exception {
-
-		return search(
-			groupId, channelId, contactsEntityId, contactsEntityType,
-			dataSourceId, query, state, segmentType, cur, delta,
-			orderByFieldsFaroParam.getValue());
+			dataSourceId, query, segmentTypesFaroParam.getValue(), state, cur,
+			delta, orderByFieldsFaroParam.getValue());
 	}
 
 	@Path("/{id}")
@@ -379,25 +324,13 @@ public class IndividualSegmentController extends BaseFaroController {
 
 		validateUpdate(individualSegment);
 
-		String segmentType = individualSegment.getSegmentType();
-
-		if (segmentType.equals(IndividualSegment.Type.DYNAMIC.name())) {
-			return updateDynamic(
-				groupId, individualSegment, filter, includeAnonymousUsers,
-				name);
-		}
-		else if (segmentType.equals(IndividualSegment.Type.STATIC.name())) {
-			return updateStatic(
-				groupId, individualSegment, individualIdsFaroParam.getValue(),
-				name);
-		}
-
-		return new IndividualSegmentDisplay(individualSegment);
+		return updateIndividualSegment(
+			groupId, individualSegment, filter, includeAnonymousUsers, name);
 	}
 
-	protected IndividualSegmentDisplay createDynamic(
+	protected IndividualSegmentDisplay createIndividualSegment(
 			String channelId, long groupId, String filter,
-			boolean includeAnonymousUsers, String name)
+			boolean includeAnonymousUsers, String name, String segmentType)
 		throws Exception {
 
 		FaroProject faroProject =
@@ -406,35 +339,14 @@ public class IndividualSegmentController extends BaseFaroController {
 		return new IndividualSegmentDisplay(
 			contactsEngineClient.addIndividualSegment(
 				faroProject, getUserId(), channelId, filter,
-				includeAnonymousUsers, name,
-				IndividualSegment.Type.DYNAMIC.name(),
+				includeAnonymousUsers, name, segmentType,
 				IndividualSegment.Status.ACTIVE.name()));
-	}
-
-	protected IndividualSegmentDisplay createStatic(
-			String channelId, long groupId, List<String> individualIds,
-			String name)
-		throws Exception {
-
-		FaroProject faroProject =
-			faroProjectLocalService.getFaroProjectByGroupId(groupId);
-
-		IndividualSegment individualSegment =
-			contactsEngineClient.addIndividualSegment(
-				faroProject, getUserId(), channelId, null, false, name,
-				IndividualSegment.Type.STATIC.name(),
-				IndividualSegment.Status.ACTIVE.name());
-
-		contactsEngineClient.addMemberships(
-			faroProject, individualSegment.getId(), individualIds);
-
-		return new IndividualSegmentDisplay(individualSegment);
 	}
 
 	protected FaroResultsDisplay<IndividualSegment> search(
 			long groupId, String channelId, String contactsEntityId,
 			int contactsEntityType, String dataSourceId, String query,
-			String segmentType, String state, int cur, int delta,
+			List<String> segmentTypes, String state, int cur, int delta,
 			List<OrderByField> orderByFields)
 		throws Exception {
 
@@ -446,7 +358,7 @@ public class IndividualSegmentController extends BaseFaroController {
 		if (Validator.isNull(contactsEntityId)) {
 			results = contactsEngineClient.getIndividualSegments(
 				faroProject, channelId, dataSourceId, query,
-				Collections.singletonList("name"), null, segmentType, state,
+				List.of("authorName", "name"), null, segmentTypes, state,
 				IndividualSegment.Status.ACTIVE.name(), cur, delta,
 				orderByFields);
 		}
@@ -471,7 +383,7 @@ public class IndividualSegmentController extends BaseFaroController {
 		return new FaroResultsDisplay<>();
 	}
 
-	protected IndividualSegmentDisplay updateDynamic(
+	protected IndividualSegmentDisplay updateIndividualSegment(
 			long groupId, IndividualSegment individualSegment, String filter,
 			boolean includeAnonymousUsers, String name)
 		throws Exception {
@@ -549,11 +461,7 @@ public class IndividualSegmentController extends BaseFaroController {
 			throw new FaroException("Invalid channel ID: " + channelId);
 		}
 
-		if (!segmentType.equals(IndividualSegment.Type.STATIC.name()) &&
-			!segmentType.equals(IndividualSegment.Type.DYNAMIC.name())) {
-
-			throw new FaroException("Invalid segment type: " + segmentType);
-		}
+		validateType(segmentType);
 	}
 
 	protected void validateStatus(String status) {
@@ -563,21 +471,17 @@ public class IndividualSegmentController extends BaseFaroController {
 		}
 	}
 
-	protected void validateUpdate(IndividualSegment individualSegment) {
-		validateStatus(individualSegment.getStatus());
+	protected void validateType(String segmentType) {
+		if (!segmentType.equals(IndividualSegment.Type.BATCH.name()) &&
+			!segmentType.equals(IndividualSegment.Type.REAL_TIME.name())) {
+
+			throw new FaroException("Invalid segment type: " + segmentType);
+		}
 	}
 
-	protected void validateUpdateMemberships(
-		IndividualSegment individualSegment) {
-
-		String segmentType = individualSegment.getSegmentType();
-
-		if (!segmentType.equals(IndividualSegment.Type.STATIC.name())) {
-			throw new FaroException(
-				"You cannot modify memberships of type: " + segmentType);
-		}
-
+	protected void validateUpdate(IndividualSegment individualSegment) {
 		validateStatus(individualSegment.getStatus());
+		validateType(individualSegment.getSegmentType());
 	}
 
 	private static final int[] _ENTITY_TYPES = {
